--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose-unique-validator": "^3.0.0",
